# dns_list_sorter_py

./: README.md  main.py  pyproject.toml  raw_lists.toml  sorted_list_Advertising.txt  sorted_list_Malicious.txt  sorted_list_Other.txt  sorted_list_Suspicious.txt  sorted_list_Tracking.txt  white_list.txt
